Refactor codebase to use modern Java 21 features
This commit modernizes the codebase by refactoring it to use language features available in Java 21.

- Updated the Gradle build to use the Java 21 toolchain.
- Converted simple data-holding classes (`HitResult`, `Vec3`, `Vertex`, `AABB`) into records for conciseness and immutability.
- Updated all usages of the new record classes to use accessor methods instead of direct field access.
- Refactored `RubyDung.java` to use `var` for local variables, `switch` expressions for control flow, and `Thread.startVirtualThread()` for concurrency.
- Replaced mutable methods (like `AABB.move()`) with immutable patterns.